2004-08-01  James Turner  <james@worldforge.org>

	* Remove lots of debug output all over the place
	
	* Eris/Lobby.cpp, Eris/Room.cpp: get OOG imaginary ops (emotes)
	  working.

	* Eris/Player.cpp: made the error output when calling login() in
	  a bad state more useful.

	* Eris/Player.cpp: stop reporting unhandled sight(foo) as defunct
	  character look, and just ignore it.

	* Eris/Entity.cpp: add untested support for actions and imaginary
	  ops from entities.

2004-08-01  James Turner  <james@worldforge.org>

	* Eris/Room.cpp, Eris/Room.h, Eris/Lobby.cpp, Eris/Lobby.h: change
	  how OOG chat is handled, so in-room chats do the right thing.

2004-08-01  James Turner  <james@worldforge.org>

	* Eris/Entity.h, Eris/Entity.cpp: implement getViewPosition, and add
	  getViewOrientation.
	 
	* Eris/Entity.h: rename to/fromParentCoords to to/fromLocationCoords
	
	* Eris/Connection.cpp: make disconnect() check for and handle being
	  in the DISCONNECTED or DISCONNECTING states already

2004-08-01  James Turner  <james@worldforge.org>

	* Eris/Player.cpp: change logic in ::netConnected, so cresting and logging-in
	  a player inside Connection::Connected doesn't assert.
	  
	* Eris/Player.cpp: many chanegs to logout logic, should generally work now,
	  but still needs lots of testing, since there are many edge cases.

	* Eris/TypeInfo.cpp: handle custom types that inherit admin_entity, not
	  game_entity. This is true for the OOG chat structure
	  
	* Eris/Lobby.cpp: make OOG looks do the right thing with the LOOK args.

	* Eris/Lobby.cpp: when recieving the initial lobby sight, add it to the
	  m_rooms map, so talking and other actions work.
	  
	* Eris/Room.cpp: when recieving sight of a person, actually update the NULL
	  pointer in m_members with the Person object, so checkEntry succeeds.

	* Eris/Lobby.cpp: extend the router and Lobby code to deal with cyphesis's
	  OOG appearance / disapperance ops, which are from the thing, and have 
	  location set.
